# cpp

./: .gitignore  CMakeLists.txt  main.cpp
include/: movement.h
include/connections/: auth.h  auth.hpp  communicator.hpp
include/errors/: errors.hpp
include/modules/: index.h  index.hpp
include/tools/: logger.hpp
movement/: movement.cpp  movement.h
src/: main.cpp
src/connections/: auth.cpp  communicator.cpp
src/errors/: errors.cpp
src/modules/: index.cpp
src/tools/: logger.cpp
